# cern-disk-benchmark

./: CMakeLists.txt  README.md  plot_benchmark.py  run-full-benchmark.sh  run-report.sh  run-update-benchmark.sh  run-write-benchmark.sh  write-benchmark.sh
cmake/: run-benchmark.cmake
scripts/: update-benchmark  update-benchmark.sh  write-benchmark  write-benchmark.sh
